src/config/service/http/snapshots/roadster__config__service__http__initializer__tests__initializer@case_3.snap
---
source: src/config/service/http/initializer.rs
expression: initializer
---
default-enable = true

[normalize-path]
priority = 1234
