src/config/service/http/snapshots/roadster__config__service__http__initializer__tests__initializer@case_5.snap
---
source: src/config/service/http/initializer.rs
expression: initializer
---
default-enable = false

[normalize-path]
enable = false
priority = 1234
